--- a/src/screens/login/login.css
+++ b/src/screens/login/login.css
@@ -1,19 +1,15 @@
-.login-container{
-    padding-top: 20px;
-}
-.login-form-conatiner{
-    display: flex;
-    justify-content: center;    
-}
-.login-form{
-    display: flex;
-    flex-direction: column;
-    width: 400px;    
-}
-.login-form > * {
-    margin-top: 30px;
+.dispNone {
+    display:none;
 }
 
-.login-form > div {
-    margin-top: 30px;
+.dispBlock {
+    display: block;
+}
+
+.red {
+    color: red;
+}
+.main-container{
+  display: flex;
+  flex-direction: column;
 }
