--- a/src/screens/profile/profile.css
+++ b/src/screens/profile/profile.css
@@ -1,51 +1,11 @@
-.profile-container {
-  background: white;
+.information-section {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
-.profile-icon {
-  width: 120px !important;
-  height: 120px !important;
-}
-.user-info-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 0px;
-}
-
-.user-info-container .name-counts-container {
-  padding-left: 20px;
-}
-
-.edit-icon {
-  color: white;
-  background-color: #f50057;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.full-name {
-  display: flex;
-  align-items: center;
-}
-
-.full-name span {
-  padding-right: 20px;
-}
-
-.count {
-  width: 150px;
-  display: inline-block;
-  height: 20px;
-}
-
-.name-counts-container > div{
-    padding-bottom: 10px;
-}
-
-#editFormContainer .MuiFormControl-root{
-    padding-bottom: 30px;    
-}
-.MuiGridListTile-tile img{
-  cursor: pointer;
+.row{
+  display:flex;
+  flex-direction:row;
+  justify-content:flex-start;
+  align-items:center
 }
